feature: 채팅방 추가기능