@@ -1,11 +1,15 @@
 package com.linkle.domain.dto;
 
-import com.linkle.domain.entity.User;
-import lombok.*;
-
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import com.linkle.domain.entity.User;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 
 @Getter
 @Setter
@@ -24,7 +28,7 @@ public class UserResponseDTO {
     private String background;
     private String memo;
     private Integer accountNumber;
-    private LocalDate createdAt;
+    private LocalDate createdDate;
 
     // Entity → DTO 변환
     public static UserResponseDTO fromEntity(User user) {
@@ -39,15 +43,15 @@ public class UserResponseDTO {
             .background(user.getBackground())
             .memo(user.getMemo())
             .accountNumber(user.getAccountNumber())
-            .createdAt(user.getCreatedAt())
+            .createdDate(user.getCreatedDate())
             .build();
     }
 
     // List<Entity> → List<DTO> 변환
     public static List<UserResponseDTO> fromEntityList(List<User> users) {
-        if (users == null) return null;
+        if (users == null) return List.of(); // null 대신 빈 불변 리스트 반환
         return users.stream()
             .map(UserResponseDTO::fromEntity)
-            .collect(Collectors.toList());
+            .toList();
     }
 }
